Version 1.5.1:
  - Migrate Dockerfile from python:3.4 image to alpine:edge one. This reduce container size from 744 MB to 144 MB

Version 1.5:
  - Add a new documentation called "how to access Gissmo API v1 with Python"
  - Add a link from StationSite to Ground Type
  - Create Ground Type which is an EC8 soil classification
  - Move "Geology formation" (in StationSite) from "Main information" to "Other information"
  - An intervention needs at least 1 operator
  - Current user is now the default one for Intervention (bug fixed)
  - Actor review:
    - split Actor into User and Organism
    - migrate Group to Projects
    - split IntervActor to IntervUser and IntervOrganism
  - Upload directory is now available as volume for Docker containers
  - Intervention attachment is now available (documents on it)
  - New 'close channels' button on a given StationSite to give a closing date
  - Equipment List - 2 new filters appears: Status and last station
  - Display current Gissmo version on site header
  - Change application to be not translatable and only in English
  - New "Change Model" button to simulate a change of model on a given equipment
  - New field on Equipment's Model: "Manufacturer?" that informs user if
  Manufacturer was forgotten. By default Manufacturer is "Unknown"
  - Set API to v1 version to prevent future changes on it in few Gissmo versions
  - Equipments display Services and IPAddresses only if Equipments'Model have a
  field named "Could contains network configuration?" set to True
  - Equipment's Model have now a new field: "Network configurable?"
  - API is available only for a given whitelist IPs
  - API is read only
  - Scripts showing how to use the API are available in 
scripts/webservice_examples directory:
  scripts/webservice_examples/00_my_first_use.py
    - 00_my_first_use.py: a simple script that display sites
    - 02_station_services.py: displays services for each equipment of each site