@@ -29,7 +29,7 @@
 </style>
 
 <script type="text/javascript"
-    src="http://maps.google.fr/maps/api/js?sensor=false">
+    src="//maps.google.fr/maps/api/js?sensor=false">
 </script>
 
 <script type="text/javascript">
