@@ -28,7 +28,7 @@
 </style>
 
 <script type="text/javascript"
-    src="http://maps.google.fr/maps/api/js?sensor=false">
+    src="//maps.google.fr/maps/api/js?sensor=false">
 </script>
 
 <script type="text/javascript">
@@ -104,7 +104,7 @@
     var kml33 = new GGeoXml('/media/01.kml'); 
     map.addOverlay(kml33); 
  
-    var ctaLayer = new google.maps.KmlLayer('http://gmaps-samples.googlecode.com/svn/trunk/ggeoxml/cta.kml');
+    var ctaLayer = new google.maps.KmlLayer('//gmaps-samples.googlecode.com/svn/trunk/ggeoxml/cta.kml');
     ctaLayer.setMap(map);
    */
     setMarkers(map, sites);
