@@ -1,3 +1,6 @@
+Current version (1.5.2-trunk):
+  - Fix HTTPS problem with google map
+
 Version 1.5.1:
   - Migrate Dockerfile from python:3.4 image to alpine:edge one. This reduce container size from 744 MB to 144 MB
 
